Table user {
  user_id uuid [pk, not null]
  username varchar(255) [not null, unique]
  email varchar(255) [not null, unique]
  password varchar(255) [not null]
  role varchar(50) [not null]
  created_at timestamp [not null]
}

Table user_profile {
  user_profile_id uuid [pk, not null]
  first_name varchar(255) [not null]
  last_name varchar(255) [not null]
  date_of_birth date [not null]
  phone_number varchar(20) [unique]
  user_id uuid [not null, unique, ref: > user.user_id]
  address_id uuid [ref: > address.address_id]
  image_id uuid [ref: > image.image_id]
}

Table attendee {
  user_id uuid [pk, not null, ref: > user.user_id]
}

Table employee {
  user_id uuid [pk, not null, ref: > user.user_id]
}

Table organizer {
  user_id uuid [pk, not null, ref: > user.user_id]
}

Table image {
  image_id uuid [pk, not null]
  url varchar(255) [not null]
}

Table log {
  log_id uuid [pk, not null]
  type varchar(100) [not null]
  timestamp timestamp [not null]
  description text
  data jsonb
  user_id uuid [ref: > user.user_id]
}

Table country {
  country_id uuid [pk, not null]
  name varchar(100) [not null]
  iso_code_2 char(2) [not null, unique]
}

Table city {
  city_id uuid [pk, not null]
  name varchar(100) [not null]
  postal_code varchar(20) [not null]
  country_id uuid [not null, ref: > country.country_id]
}

Table address {
  address_id uuid [pk, not null]
  street varchar(255) [not null]
  number varchar(20) [not null]
  apartment_suite varchar(100)
  city_id uuid [not null, ref: > city.city_id]
}

Table festival {
  festival_id uuid [pk, not null]
  name varchar(255) [not null]
  description text [not null]
  start_date date [not null]
  end_date date [not null]
  capacity int [not null]
  status varchar(50) [not null, note: "active, inactive, private..."]
  store_status varchar(50) [not null, note: "open, closed"]
  address_id uuid [not null, ref: > address.address_id]
}

Table festival_image {
  festival_id uuid [not null, ref: > festival.festival_id]
  image_id uuid [not null, ref: > image.image_id]

  Indexes {
    (festival_id, image_id) [pk]
  }
}

Table price_list {
  price_list_id uuid [pk, not null]
  festival_id uuid [not null, ref: > festival.festival_id]
}

Table price_list_item {
  price_list_item_id uuid [pk, not null]
  date_from date [not null]
  date_to date [not null]
  is_fixed boolean [not null]
  price_list_id uuid [not null, ref: > price_list.price_list_id]
  item_id uuid [not null, ref: > item.item_id]
}

Table item {
  item_id uuid [pk, not null]
  name varchar(255) [not null]
  description text [not null]
  available_number int [not null]
  remaining_number int [not null]
  type varchar(100) [not null, note: "ticket, addon..."]
  festival_id uuid [not null, ref: > festival.festival_id]
}

Table ticket_type {
  item_id uuid [pk, not null, ref: > item.item_id]
}

Table package_addon {
  item_id uuid [pk, not null, ref: > item.item_id]
  category varchar(100) [not null, note: "camp, transport, general"]
}

Table package_addon_image {
  item_id uuid [not null, ref: > package_addon.item_id]
  image_id uuid [not null, ref: > image.image_id]

  Indexes {
    (item_id, image_id) [pk]
  }
}

Table camp_addon {
  item_id uuid [pk, not null, ref: > package_addon.item_id]
  camp_name varchar(255) [not null]
}

Table camp_equipment {
  camp_equipment_id uuid [pk, not null]
  name varchar(255) [not null]
  item_id uuid [not null, ref: > camp_addon.item_id]
}

Table transport_addon {
  item_id uuid [pk, not null, ref: > package_addon.item_id]
  transport_type varchar(100) [not null, note: "bus, train, plane..."]
  departure_time timestamp [not null]
  arrival_time timestamp [not null]
  return_departure_time timestamp [not null]
  return_arrival_time timestamp [not null]
  departure_city_id uuid [not null, ref: > city.city_id, note: "departure city"]
  arrive_city_id uuid [not null, ref: > city.city_id, note: "destination city"]
}

Table festival_ticket {
  festival_ticket_id uuid [pk, not null]
  item_id uuid [not null, ref: > ticket_type.item_id]
}

Table bracelet {
  bracelet_id uuid [pk, not null]
  pin varchar(20) [not null]
  barcode_number varchar(50) [not null, unique]
  balance decimal(10, 2) [not null, default: 0.00]
  festival_ticket_id uuid [not null, ref: > festival_ticket.festival_ticket_id]
  attendee_id uuid [not null, ref: > attendee.user_id, note: "belongs to the Attendee"]
  employee_id uuid [ref: > employee.user_id, note: "Employee issued the Bracelet"]
}

Table activation_help_request {
  activation_help_request_id uuid [pk, not null]
  user_entered_pin varchar(20) [not null]
  issue_description text [not null]
  timestamp timestamp [not null]
  proof_image_id uuid [not null, ref: > image.image_id]
  status varchar(50) [not null, note: "open, accepted, rejected"]
  bracelet_id uuid [not null, ref: > bracelet.bracelet_id]
  attendee_id uuid [not null, ref: > attendee.user_id]
  employee_id uuid [ref: > employee.user_id]
}

Table festival_employee {
  user_id uuid [not null, ref: > employee.user_id]
  festival_id uuid [not null, ref: > festival.festival_id]

  Indexes {
    (user_id, festival_id) [pk]
  }
}

Table festival_organizer {
  user_id uuid [not null, ref: > organizer.user_id]
  festival_id uuid [not null, ref: > festival.festival_id]

  Indexes {
    (user_id, festival_id) [pk]
  }
}

Table order {
  order_id uuid [pk, not null]
  timestamp timestamp [not null]
  total_amount decimal(10, 2) [not null]
  user_id uuid [not null, ref: > attendee.user_id]
  festival_ticket_id uuid [not null, ref: > festival_ticket.festival_ticket_id]
  festival_package_id uuid [ref: > festival_package.festival_package_id]
}

Table festival_package {
  festival_package_id uuid [pk, not null]
}

Table festival_package_addon {
  festival_package_id uuid [not null, ref: > festival_package.festival_package_id]
  item_id uuid [not null, ref: > package_addon.item_id]

  Indexes {
    (festival_package_id, item_id) [pk]
  }
}
